--- a/app/views/layouts/partials/_slide-in-menu.html.erb
+++ b/app/views/layouts/partials/_slide-in-menu.html.erb
@@ -1,5 +1,5 @@
 <div id="site-menu">
-  <div class="toggle-nav toggle-nav-x"><i class="fa fa-times"></i></div>
+  <div class="toggle-nav toggle-nav-x" onclick="toggleNav();"><i class="fa fa-times"></i></div>
   <h2><a href="/">TTM</a></h2>
   <hr>
   <a href="/categories/student-life">Student Life</a>
