--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,11 @@
 <html lang="en">
   <head>
     <meta name="p:domain_verify" content="b07db16852ac484ab4d32324394040a1"/>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link rel="icon" href="https://i.ibb.co/TBp2fyD/logot-2.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.googleapis.com/css?family=Kameron:700|Vollkorn:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <%= display_meta_tags %>
     <%= csrf_meta_tags %>
@@ -47,7 +45,7 @@
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
             <div id="banner">
-              <i class="fa fa-bars toggle-nav"></i>
+              <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
               <a id="name_wrapper" href="/"><%= image_tag "teenmag.png", id: "name" %></a>
               <div class="social-media">
                 <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
@@ -79,7 +77,7 @@
           <%= yield %>
         </div>
       </div>
-      <div class="toggle-nav" id="navigation_overlay"></div>
+      <div class="toggle-nav" onclick="toggleNav();" id="navigation_overlay"></div>
       <%= render "layouts/partials/footer" %>
     </div>
     <%= javascript_include_tag 'application' %>
