--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -11,6 +11,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
     <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'dashboard'%>
   </head>
   <body>
     <% if notice %>
