fixed grammar mistake on about page

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -12,7 +12,7 @@
     As a Junior in high school, <%= link_to("Mia Johansson", User.first, :class => "link_nrml underline") %>
     found there was a need for an online platform for young writers to connect and have their voices heard.
     She built the first version of The Teen Magazine in 2017, and since then, the online publishing platform has reached hundreds of thousands of readers and
-    has a writer community with <%= User.count %> writers from around the world. Mia is now a student Harvard and continues to work on the website.
+    has a writer community with <%= User.count %> writers from around the world. Mia is now a student at Harvard and continues to work on the website.
   </p>
   <p>
     Mia cannot thank The Teen Magazine's writers enough for sparking her passion and love for this community. Our current writer team is at the heart of our ever-evolving online platform for young writers, and
