--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -25,7 +25,7 @@
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix minimal_banner">
             <div id="banner">
-              <i class="fa fa-bars toggle-nav"></i>
+              <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
               <a id="name_wrapper" href="/"><%= image_tag "teenmag.png", id: "name" %></a>
               <div class="social-media">
                 <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
@@ -57,7 +57,7 @@
           <%= yield %>
         </div>
       </div>
-      <div class="toggle-nav" id="navigation_overlay"></div>
+      <div class="toggle-nav" onclick="toggleNav();" id="navigation_overlay"></div>
       <%= render "layouts/partials/footer" %>
     </div>
     <script>
