--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -9,6 +9,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <%= display_meta_tags %>
     <%= csrf_meta_tags %>
+    <!-- <script type="text/javascript">
+      $('document').ready(function() {
+        setTimeout(function() {
+          $('.notice').slideUp();
+        }, 2500);
+        setTimeout(function() {
+          $('.alert').slideUp();
+        }, 2500);
+      });
+    </script> -->
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
     <%= javascript_include_tag 'application'%>
     <%= javascript_include_tag 'dashboard'%>
@@ -60,13 +70,23 @@
       <div class="toggle-nav" onclick="toggleNav();" id="navigation_overlay"></div>
       <%= render "layouts/partials/footer" %>
     </div>
-    <script>
+    <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-89987071-1', 'auto');
       ga('send', 'pageview');
+    </script>
+    <script type="text/javascript">
+      $('document').ready(function() {
+        setTimeout(function() {
+          $('.notice').slideUp();
+        }, 1500);
+        setTimeout(function() {
+          $('.alert').slideUp();
+        }, 1500);
+      });
     </script>
   </body>
 </html>
