--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,277 +1,5 @@
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style>
-.post_image {
-  background-image: url(<%= @post.thumbnail.url(:large2) %>);
-}
-blockquote {
-  margin: 1em 0;
-  font-style: italic;
-}
-</style>
-
-<% @collab = nil %>
-<% if @post.collaboration != "" %>
-  <% @collab = User.where(email: @post.collaboration).first %>
+<% if @post.is_published? %>
+  <%= render "posts/published" %>
+<% else %>
+  <%= render "posts/draft" %>
 <% end %>
-
-<div class="div">
-  <% if !(@post.is_published?) %>
-    <% @most_recent_review = @post.reviews.last %>
-    <% if !@most_recent_review.nil? && !(@most_recent_review.try(:status).eql? "In Progress") %>
-      <%= render '/posts/banner_status' %>
-    <% elsif @post.pitch.present? %>
-      <p class= "banner_stts">In Progress | Review this draft's pitch <%= link_to("here", @post.pitch, target: "_blank", class: "link_white") %></p>
-    <% else %>
-      <p class="banner_stts">In Progress</p>
-    <% end %>
-  <% end %>
-  <div class="post_image">
-  </div>
-</div>
-<div class="flex_wrapper_posts">
-  <div class="skinny wrapper_padding" id="post_show_content">
-    <header id="post_title_show">
-      <h1 class="title_article_show"><%= @post.title %></h1>
-      <h3><%= link_to(@post.category.name, @post.category) %></h3>
-      <div class="post_info">
-        <div class="left_side_flex">
-          <div class="authors">
-            <div class="one_author">
-              <% if @post.user.profile.exists? %>
-                <%= image_tag(@post.user.profile.url(:square), :class => "profile_img") %>
-              <% else %>
-                <%= image_tag("profile_image", :class => "profile_img") %>
-              <% end %>
-              <p class="author" style="margin-right: 10px;">
-                  By <%= link_to(@post.user.full_name, @user) %>
-            </div>
-            <div class="one_author second_author">
-              <% if @collab != nil %>
-                  <% if @collab.profile.exists? %>
-                    <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
-                  <% else %>
-                    <%= image_tag("profile_image", :class => "profile_img") %>
-                  <% end %>
-                  <p class="author" style="margin-right: 10px;">
-                    By <%= link_to(@collab.full_name, @collab) %></p>
-              <% end %>
-            </div>
-          </div>
-          <i class="fa fa-clock-o" style="margin-right: 3px;" aria-hidden="true"></i>
-          <p class="date"><%= @date.strftime('%A, %B %d')%></p>
-        </div>
-        <div class="social_icons">
-          <a class="fb-share" href="//www.facebook.com/v2.3/dialog/feed?app_id=1190455601051741
-          &name=<%= @post.title %>
-          &description=<%= @post.meta_description %>
-          &link=http://www.theteenmagazine.com/<%= @post.slug %>">
-            <div>
-              <i aria-hidden="true" class="fa fa-facebook"></i>
-            </div>
-         </a>
-        <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=http://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
-          <div style="background-color: #55ACEE">
-            <i aria-hidden="true" class="fa fa-twitter"></i>
-          </div>
-       </a>
-       <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
-         <div style="background-color: #cb2027">
-           <i aria-hidden="true" class="fa fa-pinterest"></i>
-         </div>
-      </a>
-       <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
-         <div  style="background-color: #333">
-           <i aria-hidden="true" class="fa fa-envelope-o"></i>
-         </div>
-       </a>
-      </div>
-      </div>
-    </header>
-
-  <div id="content">
-    <div class="flex_wrapper_content">
-      <div class="post_wrapper">
-        <div class="post_content">
-          <%= markdown @post.content %>
-        </div>
-        <% if current_user && (current_user.id == @post.user_id || @post.collaboration == current_user.email || current_user.admin? || current_user.editor?) %>
-          <div id="admin_links">
-            <%= link_to "Edit Article", edit_post_path(@post) %>
-            <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
-            <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %>
-            <% end %>
-          </div>
-        <% end %>
-        <div id= "background">
-         <%= render :partial => 'users/profile' %>
-         <% if @collab != nil %>
-           <div class="flex--profile" style="margin-top: -40px">
-             <% if @collab.profile.exists? %>
-               <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
-             <% else %>
-               <%= image_tag("profile_image", :class => "profile_img") %>
-             <% end %>
-             <div class="info">
-             <h2 style="margin-bottom: 5px;">
-             <% @name =
-               if (@collab.first_name != "" && @collab.first_name !=nil)
-                 @collab.first_name
-               end
-               if (@collab.last_name != "" && @collab.last_name!= nil)
-                 @name = @name + " " + @collab.last_name
-               end %>
-             <%= link_to(@name, @collab) %>
-             </h2>
-             <% if @collab.editor? %>
-               <span class="editor_status">
-                 Editor
-               </span>
-             <% end %>
-             <% if (@collab.description != "" && @collab.description != nil) %>
-               <p class="description_user" style="margin-top: 5px;"><%= @collab.description %></p>
-             <% end %>
-               <div class="website">
-                 <% if (@user.website != "" && @user.website !=  nil) %>
-                    <p class="website_link"><span>Website: </span><a href="https://www.<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
-                 <% end %>
-                 <% if (@user.twitter != "" && @user.twitter !=  nil) %>
-                    <p class="website_link"><a href="https://www.twitter.com/<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
-                 <% end %>
-                 <% if (@user.insta != "" && @user.insta != nil) %>
-                    <p class="website_link"><a href="https://www.instagram.com/<%= @user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
-                 <% end %>
-                 <% if (@user.facebook != "" && @user.facebook !=  nil) %>
-                    <p class="website_link"><a href="https://www.facebook.com/<%= @user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
-                 <% end %>
-                 <% if (@user.youtube != "" && @user.youtube != nil) %>
-                    <p class="website_link"><a href="https://www.youtube.com/<%= @user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
-                 <% end %>
-               </div>
-             </div>
-           </div>
-         <% end %>
-        </div>
-        <br />
-        <% if @post.is_published? %>
-          <div id="mc_embed_signup" style="width: 100%; margin: 20px 0; margin-left: 0px;">
-            <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
-              <div id="mc_embed_signup_scroll">
-                <h2>Loving The Teen Magazine? Subscribe!</h2>
-                <div class="mc-field-group">
-                  <input placeholder="Email Address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                </div>
-                <div >
-                  <div id="mce-error-response" style="display:none"></div>
-                  <div id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe subscribe_btn" id="mc-embedded-subscribe" class="button"></div>
-                </div>
-            </form>
-          </div>
-        <% end %>
-      </div>
-      <% if @post.is_published? %>
-        <div class="post_apply">
-          <div id="apply_link">
-            <a href="/apply"><%= image_tag "become_writer.jpg" %></a>
-          </div>
-          <div class="articles">
-            <div class="flex_other_articles">
-              <h3 class="title">Trending in <%= link_to(@post.category.name, @post.category) %></h3>
-              <div class="contain_articles">
-                <% @trending.each do |post| %>
-                  <div class="ctgry_article">
-                     <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
-                    <div class="paragraph">
-                      <p><%= link_to(post.title.truncate_words(20), post) %></p>
-                    </div>
-                  </div>
-              <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% else %>
-        <div class="share_article_feedback">
-          <% if @post.sharing != true %>
-            <h3 class="title">Get peer feedback on your article</h3>
-            <br>
-            <div class="btn_cntnr">
-              <%= link_to "Turn on sharing", post_path(@post, sharing: true), class: "newpost--new--profile" %>
-            </div>
-          <% else %>
-            <h3>Peer comments and reviews</h3>
-            <div class="comments">
-              <ul class="list-group list-group-flush">
-                <% if @comments.count.eql? 0 %>
-                  <i>Social sharing is turned on! Ask other TTM writers to give their feedback on your article by posting the link to this article in the <a href="https://www.facebook.com/groups/615063885673363/" target="_blank" style="color: #65B19D;">Facebook group</a>.</i>
-                <% else %>
-                  <% @comments.each do |comment| %>
-                    <% if (comment.user_id.eql? current_user.id) || (@post.user_id.eql? current_user.id) || (current_user.admin) %>
-                      <%= link_to comment_path(comment), method: :delete, class: "delete_btn_x" do %>
-                        <i class="fa fa-times"></i>
-                      <% end %>
-                    <% end %>
-                    <li class="list-group-item comment">
-                      <% @profile_img = comment.user.profile.exists? ? image_tag(comment.user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image", :class => "profile_img_small") %>
-                      <%= link_to(@profile_img, comment.user) %>
-                      <div>
-                        <h6><%= link_to comment.user.full_name, comment.user %></h6>
-                        <span class="date_ago"><%= comment.user.comments.count %> points, <%= time_ago_in_words(comment.created_at) %> ago</span><br>
-                        <span><%= comment.text %></span><br>
-                      </div>
-                    </li>
-                  <% end %>
-                <% end %>
-                <%= form_for @comment do |f| %>
-                  <%= f.text_field :text, :placeholder => "Your feedback", class: "comment_field" %>
-                  <%= f.hidden_field :post_id, :post_id => @post.id %>
-                  <%= f.submit "", class: "submit_comment" %>
-                <% end %>
-              </ul>
-            </div>
-            <% if current_user.admin? || current_user.id == @post.user_id %>
-              <div class="btn_cntnr">
-                <%= link_to "Turn off sharing", post_path(@post, sharing: false), :data => {:confirm => "Are you sure you want to turn off peer sharing?"}, class: "newpost--new--profile" %>
-              </div>
-            <% end %>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-  <br />
- <div id="disqus_thread"></div>
- <%= javascript_include_tag 'mailchimp' %>
- <script>
- (function() { // DON'T EDIT BELOW THIS LINE
- var d = document, s = d.createElement('script');
- s.src = 'https://the-teen-magazine.disqus.com/embed.js';
- s.setAttribute('data-timestamp', +new Date());
- (d.head || d.body).appendChild(s);
- })();
- </script>
- <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</div>
-</div>
-
-<script>
-$(document).ready(function() {
-   $('.fb-share').click(function(e) {
-       e.preventDefault();
-       window.open($(this).attr('href'), 'fbShareWindow', 'height=450, width=550, top=' + ($(window).height() / 2 - 275) + ', left=' + ($(window).width() / 2 - 225) + ', toolbar=0, location=0, menubar=0, directories=0, scrollbars=0');
-       return false;
-   });
-   $('.js-share-twitter-link').click(function(e) {
-       e.preventDefault();
-       var href = $(this).attr('href');
-       window.open(href, "Twitter", 'height=450, width=550, top=' + ($(window).height() / 2 - 275) + ', left=' + ($(window).width() / 2 - 225) + ', toolbar=0, location=0, menubar=0, directories=0, scrollbars=0');
-   });
-   $('.js-share-pinterest-link').click(function(e) {
-       e.preventDefault();
-       var href = $(this).attr('href');
-       window.open(href, "Pinterest", 'height=450, width=550, top=' + ($(window).height() / 2 - 275) + ', left=' + ($(window).width() / 2 - 225) + ', toolbar=0, location=0, menubar=0, directories=0, scrollbars=0');
-   });
-});
-</script>
