--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -12,7 +12,7 @@
     <h3>We grow as writers, as journalists, as leaders, together</h3>
     <p>Congratulations on being accepted as a writer for The Teen Magazine! Our community of talented and young writers
       inspire and support each other into becoming part of the next generation of
-       leaders.</p>
+       journalists and influencers.</p>
     <%= image_tag "we-are-the-writers.jpg", :class => "welcome_hero" %>
     <p style="margin-top: 8px; font-family: 'Playfair Display'"><i>❝ Throughout human history, our greatest leaders and thinkers have used
       the power of words to transform our emotions, to enlist us in their causes, and to
