--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -142,11 +142,11 @@
         object-fit: cover;
       }
       p {
-        font-size: .9em;
+        font-size: 1em;
         margin: 0;
         margin-left: 10px;
         line-height: 18px;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: 'Roboto Condensed Bold', sans-serif;
         font-style: italic;
         a {
           color: #191919;
