--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -40,7 +40,7 @@
     margin-bottom:  10px;
     padding-bottom: 10px;
     text-shadow: 0.5px 0.5px #191919;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
     text-decoration: none;
   }
   figure {
@@ -65,11 +65,11 @@
         background-size: cover;
       }
       p {
-        font-size: .9em;
+        font-size: 1em;
         margin: 0;
         margin-left: 10px;
         line-height: 18px;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: 'Roboto Condensed Bold', sans-serif;
         font-style: italic;
         a {
           color: #191919;
@@ -83,6 +83,7 @@
 .share_article_feedback {
   h3 {
     margin: 0;
+    font-family: 'Playfair Display';
   }
   .comments {
     i {
@@ -118,7 +119,6 @@
       .delete_btn_x {
         width: 15px !important;
         right: 0;
-        padding-top: 28px;
         position: absolute;
         z-index: 10;
       }
@@ -132,6 +132,9 @@
         background-image: url("post_comment.png");
         background-size: contain;
         background-repeat: no-repeat;
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
     a {
@@ -151,23 +154,35 @@
   border-color: #65B19D;
 }
 
+.post_apply h3, a {
+  font-family: "Playfair Display";
+  color: black;
+}
+
 .post_apply, .share_article_feedback {
   display: flex;
   flex-direction: column;
   background-color: white;
-  padding: 15px 0 0 20px;
-  min-width: 310px;
-  max-width: 310px;
+  min-width: 330px;
+  max-width: 330px;
+  padding: 30px;
+  z-index: 30;
+  margin-top: 140px;
+  margin-left: 20px;
   img {
     width: 100%;
   }
 }
 
 .flex_wrapper_posts {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+.flex_wrapper_columns {
   display: flex;
   flex-direction: row;
   margin: 0 auto;
-  max-width: 90rem;
 }
 
 .skinny {
@@ -215,6 +230,14 @@ iframe { margin: 1em auto;  display: block; }
   z-index: 0;
   padding: 10px 40px 0 40px;
 
+  #category_title a {
+    font-family: "Roboto Condensed Light";
+    &:hover {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+
   .authors {
     display: flex;
     flex-direction: row;
@@ -231,13 +254,14 @@ iframe { margin: 1em auto;  display: block; }
     color: #65B19D;
     text-shadow: 1px 1px #191919;
     font-size: 50px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
   }
-  h3 {
-    font-family: 'Kristi';
+  h3 a {
     font-size: 15px;
+    font-family: 'Roboto Condensed Bold', sans-serif;
     margin: 0;
     margin-top: 23px;
+    font-weight: lighter;
     text-transform: uppercase;
     a {
       text-decoration: none;
@@ -359,6 +383,7 @@ iframe { margin: 1em auto;  display: block; }
     font-weight: 700;
     font-size: .8em;
     text-transform: uppercase;
+    font-family: inherit;
     &:hover {
       color: #65B19D;
     }
@@ -389,8 +414,8 @@ iframe { margin: 1em auto;  display: block; }
       }
     }
 
-    #content {
-      padding: 0 20px;
+    #content, .post_apply, .share_article_feedback {
+      padding: 0 20px !important;
     }
 }
 
