fixed ad format

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -35,8 +35,8 @@
   display: block;
   margin: 0 auto;
   ins, iframe {
-    margin: 0 auto;
-    display: block;
+    margin: 0 auto !important;
+    display: block !important;
   }
 }
 
