fixed disappearing ad

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -160,7 +160,10 @@
 }
 
 .post_apply {
-  padding: 0 20px;
+  padding: 15px;
+  .ads_wrapper {
+    margin-bottom: 20px;
+  }
 }
 
 .share_article_feedback {
