fixed css on homepage mobile ads

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -395,9 +395,8 @@ $gray:  #2a2a2a;
 
 @media (max-width: 800px) {
   .flex--welcome {
-    .ads_wrapper {
-      ins {
-        margin: 0 -15px !important;
+    .ads_wrapper * {
+        margin: 0 !important;
       }
     }
   }
