final fix ads mobile home screen

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -395,8 +395,11 @@ $gray:  #2a2a2a;
 
 @media (max-width: 800px) {
   .flex--welcome {
-    .ads_wrapper * {
-      margin: 0 !important;
+    .ads_wrapper {
+      margin: 0 -15px !important;
+      * {
+        margin: 0 !important;
+      }
     }
   }
 }
