--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -397,9 +397,19 @@ $gray:  #2a2a2a;
   .flex--welcome {
     .ads_wrapper {
       margin: 0 -15px !important;
+      background-color: transparent;
       * {
         margin: 0 !important;
       }
+    }
+  }
+}
+
+@media (min-width: 800px) {
+  .big_block {
+    margin-top: -20px !important;
+    .ctgry_article {
+      margin-top: 20px;
     }
   }
 }
